errlog
kai@kais-laptop:~/Code/Jocoa$ make
g++ src/**/*.cpp -o jocoa
src/command/CommandBuilder.cpp:9:15: warning: extra tokens at end of #ifdef directive
    9 | #ifdef _WIN32 || __WINDOWS__
      |               ^~
src/command/CommandBuilder.cpp: In static member function ‘static std::string CommandBuilder::buildJavaCommand(JsonData)’:
src/command/CommandBuilder.cpp:33:1: warning: no return statement in function returning non-void [-Wreturn-type]
   33 | }
      | ^
./jocoa
Test

FROM 

#ifdef _WIN32 || __WINDOWS__
    #define OS_DELIMITER ";"
#elif __unix__ || __linux__
    #define OS_DELIMETER ":"
#endif

FIXED

kai@kais-laptop:~/Code/Jocoa$ make
g++ src/**/*.cpp -o jocoa
src/command/CommandBuilder.cpp: In static member function ‘static std::string CommandBuilder::buildJavaCommand(JsonData)’:
src/command/CommandBuilder.cpp:33:1: warning: no return statement in function returning non-void [-Wreturn-type]
   33 | }
      | ^
./jocoa
Test

WITH

#if defined(_WIN32) || defined(__WINDOWS__)
    #define OS_DELIMITER ";"
#elif defined(__unix__) || defined(__linux__)
    #define OS_DELIMETER ":"
#endif



------------------------------------------------------------------------------------------------



kai@kais-laptop:~/Code/Jocoa$ make
g++ src/**/*.cpp -o jocoa
src/command/CommandBuilder.cpp: In static member function ‘static std::string CommandBuilder::buildJavaCommand(JsonData)’:
src/command/CommandBuilder.cpp:33:1: warning: no return statement in function returning non-void [-Wreturn-type]
   33 | }
      | ^
./jocoa
Test

FROM

string CommandBuilder::buildJavaCommand(JsonData jsonData)
{
    string finalCommand = "java -cp .";
    finalCommand += OS_DELIMETER + jsonData.classpath;

    for (const auto &dependency : jsonData.dependencies) { finalCommand += OS_DELIMETER + dependency; }
    
    finalCommand += "-Djava.library.path=" + jsonData.natives + " main/Main";
}

FIXED

kai@kais-laptop:~/Code/Jocoa$ make
g++ src/**/*.cpp -o jocoa
./jocoa
Test

WITH

string CommandBuilder::buildJavaCommand(JsonData jsonData)
{
    string finalCommand = "java -cp .";
    finalCommand += OS_DELIMETER + jsonData.classpath;

    for (const auto &dependency : jsonData.dependencies) { finalCommand += OS_DELIMETER + dependency; }
    
    finalCommand += "-Djava.library.path=" + jsonData.natives + " main/Main";
    return finalCommand;
}



------------------------------------------------------------------------------------------------



kai@kais-laptop:~/Code/Jocoa$ make
g++ src/**/*.cpp -o jocoa
In file included from src/jocoa/Jocoa.cpp:3:
src/jocoa/../command/Commands.hpp:31:33: error: ‘string’ has not been declared
   31 |     static void createDirectory(string path);
      |                                 ^~~~~~
make: *** [Makefile:2: default] Error 1

FROM

class Commands
{
private:
    static void createDirectory(string path);

FIXED

kai@kais-laptop:~/Code/Jocoa$ make
g++ src/**/*.cpp -o jocoa
./jocoa
Test

WITH

#include <string>

using std::string;